Fix scroll jank & Page overflow

--- a/components/PerfectGrip/PerfectGrip.module.css
+++ b/components/PerfectGrip/PerfectGrip.module.css
@@ -1,7 +1,7 @@
 .root {
   height: 300vh;
   position: relative;
-  width: 100vw;
+  width: 100%;
   overflow: hidden;
 }
 
